# s2s

./: .gitignore  .gitmodules  Cargo.toml  readme.md
.github/workflows/: build.yml
res/tests_sat/: alphabet_len.smt  alphabet_len.smt2  bug.smt2  cnf.smt2  epsilon-1.smt2  instance2974.smt2  instance5580.smt2  int_folding.smt2  neg_ite.smt2  norn-benchmark-9i.smt2  openmrs1.smt2  re_comp_range.smt2  re_comp_union.smt2  re_comp_word.smt2  re_comp_word3.smt2  regex_simp.smt2  regex_simp_comp.smt2  rewrite_const_int_bug.smt  rw_toint.smt2  rw_toint_neg.smt2  simp_levis_length.smt2  small_cashew_l39_f18_sat.smt2  unicode_escape.smt  var_assignment.smt2  var_eq_const.smt2  weq_bug.smt2
res/tests_unsat/: levis_simp.smt2  neg_prefix_bug.smt2  neg_prefixof_bug2.smt2  norn-benchmark-9h.smt2  parikh_reasoning.smt2  re_comp_word3.smt2  reg_lc_bounds.smt2  regex-012-unsat.smt2  regex-019-unsat.smt2  rivial_neg_prefixof.smt2  trivial.smt  ttt_022.smt2  unicode_escape_2.5.smt2
res/track1/: 01.track_10.eq  01.track_100.eq  01.track_101.eq  01.track_104.eq  01.track_105.eq  01.track_106.eq  01.track_109.eq  01.track_11.eq  01.track_110.eq  01.track_111.eq  01.track_112.eq  01.track_116.eq  01.track_117.eq  01.track_12.eq  01.track_122.eq  01.track_125.eq  01.track_126.eq  01.track_129.eq  01.track_133.eq  01.track_135.eq  01.track_137.eq  01.track_138.eq  01.track_139.eq  01.track_140.eq  01.track_142.eq  01.track_143.eq  01.track_144.eq  01.track_148.eq  01.track_151.eq  01.track_152.eq  01.track_153.eq  01.track_154.eq  01.track_155.eq  01.track_157.eq  01.track_158.eq  01.track_160.eq  01.track_162.eq  01.track_163.eq  01.track_165.eq  01.track_166.eq  (+68 more)
res/track11/: 01.track_102.eq  01.track_103.eq  01.track_107.eq  01.track_114.eq  01.track_118.eq  01.track_119.eq  01.track_120.eq  01.track_121.eq  (+34 more)
scripts/: runner.py
src/: abstr.rs  abstraction.rs  alphabet.rs  bounds.rs  context.rs  domain.rs  engine.rs  error.rs  formula.rs  instance.rs  interpret.rs  interval.rs  lib.rs  main.rs  options.rs  preprocess.rs  sat.rs  solver.rs
tests/: bindep.rs  integration.rs  iwoorpje.rs  woorpje.rs
(+254 files in other folders)
