[package]
name = "satstr"
version = "0.1.0"
edition = "2021"
description = "Eager SMT solver for strings"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cadical = "0.1.14"
clap = { version = "4.2.1", features = ["derive"]}
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.17"
quickcheck = "1.0.3"
indexmap = "1.9.3"
smt2parser = "0.6.1"
num-bigint = "0.3.3"
regulaer = {git = "ssh://git@github.com/lotzk/regulaer.git", branch = "dev"}
smallvec = "1.10.0"
thiserror = "1.0.63"
num-traits = "0.2.19"


[dev-dependencies]
test-generator = "0.3.1"
quickcheck_macros = "1"
serial_test = "2.0.0"



[net]
git-fetch-with-cli = true 
